@@ -1,6 +1,7 @@
 Changes from 1.8.0 to 1.7.0
 ---------------------------
 ** Improvement
+    * [FELIX-4175] - scr.ant task does not provide scanClasses option
     * [FELIX-4101] - Create metatype.properties file when description and label are inlined
     * [FELIX-4126] - Discontinue creation of single XML descriptor files 
 
